@@ -1,3 +1,9 @@
+2014-07-11  Niels Möller  <nisse@lysator.liu.se>
+
+	* eccdata.c (ecc_curve_init): For curve 25519, use correct
+	constant for edwards coordinate transform, and output the constant
+	as ecc_edwards.
+
 2014-07-06  Niels Möller  <nisse@lysator.liu.se>
 
 	* eccdata.c: Use separate is_zero flag to represent the neutral
